Se mapean propiedades en aplication.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8081
+email.contact.set.to=john1992alex@gmail.com
+email.contact.set.subject=Formulario de contacto
+email.attachment.set.from=john1992alex@gmail.com
+email.attachment.set.subject=Reporte consolidado
+attachment.filename=consolidated-report.pdf
