Se añade archivo de despliegue y dockerfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-server.port=8085
-email.contact.set.to=john1992alex@gmail.com
-email.contact.set.subject=Formulario de contacto
-email.attachment.set.from=john1992alex@gmail.com
-email.attachment.set.subject=Reporte consolidado
-attachment.filename=consolidated-report.pdf
+#server.port=8085
+#email.contact.set.to=john1992alex@gmail.com
+#email.contact.set.subject=Formulario de contacto
+#email.attachment.set.from=john1992alex@gmail.com
+#email.attachment.set.subject=Reporte consolidado
+#attachment.filename=consolidated-report.pdf
+email.contact.set.to=${EMAIL_CONTACT_SET_TO}
+email.contact.set.subject=${EMAIL_CONTACT_SET_SUBJECT}
+email.attachment.set.from=${EMAIL_ATTACHMENT_SET_FROM}
+email.attachment.set.subject=${EMAIL_ATTACHMENT_SET_SUBJECT}
+attachment.filename=${ATTACHMENT_FILENAME}
+management.endpoint.health.probes.enabled=true
+management.health.livenesstate.enabled=true
+management.health.readinessState.enabled=true
