--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,12 @@
 	<artifactId>ms-email-notification</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-email-notification</name>
+	<packaging>jar</packaging>
 	<description>Microservicio para el envio de emails</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,6 +52,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
 		<dependency>
