Se añade propiedades como variables de entorno

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-#server.port=8085
+server.port=8084
 #email.contact.set.to=john1992alex@gmail.com
 #email.contact.set.subject=Formulario de contacto
 #email.attachment.set.from=john1992alex@gmail.com
 #email.attachment.set.subject=Reporte consolidado
 #attachment.filename=consolidated-report.pdf
+
 email.contact.set.to=${EMAIL_CONTACT_SET_TO}
 email.contact.set.subject=${EMAIL_CONTACT_SET_SUBJECT}
 email.attachment.set.from=${EMAIL_ATTACHMENT_SET_FROM}
